# ranger_plugin_hello_world

./: README.md  __init__.py  pyproject.toml
ranger_plugins/hello_world/: __init__.py  hello_world.py
